# crs-geometry-depreciated

./: .gitignore  index.html  package.json  readme.md
geometry/: Cargo.toml
geometry-wasm/: Cargo.toml
geometry-wasm/src/: lib.rs  utils.rs
geometry/src/: lib.rs  shapes.rs  utils.rs
geometry/src/macros/: converters.rs
geometry/src/shapes/: circle.rs  rectangle.rs  triangle.rs
geometry/src/utils/: standard_aabb.rs
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/shapes/: rectangle.rs  triangle.rs
rust/src/utils/: standard_aabb.rs
