[package]
name = "crs_geometry_wasm"
version = "0.1.0"
authors = ["caperaven <caperaven@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
euclid = "0.22.6"
wasm-bindgen = "0.2.73"
js-sys = "0.3.53"
crs_geometry = { version = "0.1.0", path = "../geometry" }

[profile.release]
lto = true
